--- a/app.json
+++ b/app.json
@@ -38,8 +38,8 @@
       "value": "TeleRoid14"
     },
      "UPDATE_CHANNEL": {
-      "description": "For Force Subscribe. Update channel USERNAME (without @)..",
-      "value": "TeleRoidGroup"
+      "description": "For Force Subscribe. Don't Change it😎..",
+      "value": "MoviesFlixers_DL"
     },
     "CHUNK_SIZE": {
       "description": "chunk size that should be used with requests",
